Release 1.3b3 (in development)
==============================

Incompatible changes
--------------------

* Dependency requirement updates: docutils 0.11, Pygments 2.0

Features added
--------------

* Added ``highlight_options`` configuration value.
* The ``language`` config value is now available in the HTML templates.

Bugs fixed
----------

* LaTeX writer now generates correct markup for cells spanning multiple rows.
* #1674: Do not crash if a module's ``__all__`` is not a list of strings.
* #1629: Use VerbatimBorderColor to add frame to code-block in LaTeX
* On windows, make-mode didn't work on Win32 platform if sphinx was invoked as
  ``python sphinx-build.py``.
* #1687: linkcheck now treats 401 Unauthorized responses as "working".
* #1690: toctrees with ``glob`` option now can also contain entries for single
  documents with explicit title.


Release 1.3b2 (released Dec 5, 2014)
====================================

Incompatible changes
--------------------

* update bundled ez_setup.py for setuptools-7.0 that requires Python 2.6 or
  later.

Features added
--------------

* #1597: Added possibility to return a new template name from
  `html-page-context`.
* PR#314, #1150: Configuration values are now checked for their type.  A
  warning is raised if the configured and the default value do not have the
  same type and do not share a common non-trivial base class.

Bugs fixed
----------

* PR#311: sphinx-quickstart does not work on python 3.4.
* Fix :confval:`autodoc_docstring_signature` not working with signatures
  in class docstrings.
* Rebuilding cause crash unexpectedly when source files were added.
* #1607: Fix a crash when building latexpdf with "howto" class
* #1251: Fix again. Sections which depth are lower than :tocdepth: should not
  be shown on localtoc sidebar.
* make-mode didn't work on Win32 platform if sphinx was installed by wheel
  package.


Release 1.3b1 (released Oct 10, 2014)
=====================================

Incompatible changes